Fix filter spacing

--- a/documentation/demopages/common/mijn-percelen.scss
+++ b/documentation/demopages/common/mijn-percelen.scss
@@ -100,6 +100,13 @@
   div.utrecht-form-fieldset.rvo-percelen-filter-form {
     border-radius: 3px;
     margin-block-end: 0;
+
+    .utrecht-form-field {
+      margin-block-end: 0;
+      margin-block-start: 0;
+      margin-inline-end: 0;
+      margin-inline-start: 0;
+    }
   }
 
   .rvo-percelen-filter {
@@ -122,6 +129,7 @@
     }
 
     &[open] summary {
+      margin-block-end: var(--rvo-space-xs);
       .rvo-icon-delta-omhoog {
         display: inline-flex;
       }
